New Style Of Collage Name Added
Styled hover effect of collage name on top of nav added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <img src="/Images/college logo2.png" alt="">
+        <img src="/Images/college logo2.png" alt=""><h2 class="Collage-name">DR. B.R. AMBEDKAR GOVERNMENT POLYTECHNIC AMBOTA, UNA</h3>
         <div class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
