new added updates

--- a/index.html
+++ b/index.html
@@ -11,23 +11,29 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <img src="/Images/college logo2.png" alt="">
+   
+        <img src="/Images/college logo2.png" alt=""><h2 class="collage-name">DR. B.R. AMBEDKAR GOVERNMENT POLYTECHNIC AMBOTA, UNA</h2>
         <div class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Courses</a></li>
-                <li><a href="#">Featurs</a></li>
+                <li><a href="#">Features</a></li>
                 <li><a href="#">Contact</a></li>
 
             </ul>
+       
         </div>
     </nav>
 
     <!-- Home -->
+   
     <section id="home">
-        <h2>Enhance your future with this Engineering Institute</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo inventore illo corrupti minima perferendis, ipsa, optio ducimus corporis explicabo sint odit eveniet natus. Vel, odit!</p>
+        <video class="back-video" autoplay loop muted plays-inline >
+            <source src="videos/pexels_videos_2002527 (1080p).mp4">
+        </video>
+        <h1>Dreams comes reality</h1>
+        <p>Lorem ipsum dolor sit  ipsa, optio ducimus corporis explicabo sint odit eveniet natus. Vel, odit!</p>
         <div class="btn">
             <a class="blue" href="#">Learn More</a>
             <a href="#" class="yellow">Our Courses</a>
@@ -219,9 +225,9 @@
 
         <div class="form">
             <h3>Create Free Account Now</h3>
-            <input type="text" placeholder="Name" name="" id="">
-            <input type="email" placeholder="Email Address" name="" id="">
-            <input type="text" placeholder="Phone Number" name="" id="">
+            <input type="text" placeholder="Name" name="" id=" " required>
+            <input type="email" placeholder="Email Address" name="" id="" required>
+            <input type="text" placeholder="Phone Number" name="" id="" required>
             <div class="btn">
                 <a class="yellow" href="#">Submit Here</a>
             </div>
