New Updates added by Kritika
The Homepage with video intro, courses intro also added

--- a/index.html
+++ b/index.html
@@ -81,100 +81,100 @@
 
         <div class="course-box">
             <div class="courses">
-                <img src="/Images/College-front.jpeg" alt="">
+                <img src="Images/applied.png" alt="">
                 <div class="details">
-                    <span>Updated 22/22/2023</span>
+                    <span><h3>H.O.D - AMAN SAINI</span>
                     <h6>Applied Science & Humanities</h6>
-                   <div class="star">
+                   <!-- <div class="star">
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
-                    <span>(300)</span>
-                   </div>
+                    <span>(300)</span> -->
+                   <!-- </div> --> 
                 </div>
                 <div class="cost">
-                    $50.50
+                <img src="Images/College-front.jpeg" alt="">
                 </div>
             </div>
 
             <div class="courses">
-                <img src="/Images/College-front.jpeg" alt="">
+                <img src="Images/cOMPUTER ENG.jpg" alt="">
                 <div class="details">
-                    <span>Updated 22/22/2023</span>
-                    <h6>Applied Science & Humanities</h6>
-                   <div class="star">
+                    <span><h3>H.O.D - Dr. Rajesh Sharma</h3></span>
+                    <h6>Computer Engineering</h6>
+                   <!-- <div class="star">
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <span>(300)</span>
-                   </div>
+                   </div> -->
                 </div>
                 <div class="cost">
-                    $50.50
+                    <img src="Images/College-front.jpeg" alt="">
                 </div>
             </div>
 
             <div class="courses">
-                <img src="/Images/College-front.jpeg" alt="">
+                <img src="/Images/civil.jpeg" alt="">
                 <div class="details">
-                    <span>Updated 22/22/2023</span>
-                    <h6>Applied Science & Humanities</h6>
-                   <div class="star">
+                    <span><h3>H.O.D - Chetan Mandela</h3></span>
+                    <h6>Civil Engineering</h6>
+                   <!-- <div class="star">
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <span>(300)</span>
-                   </div>
+                   </div> -->
                 </div>
                 <div class="cost">
-                    $50.50
+                    <img src="Images/College-front.jpeg" alt="">
                 </div>
             </div>
 
             <div class="courses">
-                <img src="/Images/College-front.jpeg" alt="">
+                <img src="Images/ece.jpeg" alt="">
                 <div class="details">
-                    <span>Updated 22/22/2023</span>
-                    <h6>Applied Science & Humanities</h6>
-                   <div class="star">
+                    <span><h3>H.O.D - Pawan Vardhan</h3></span>
+                    <h6>Electronics and Commmunication Engineering</h6>
+                   <!-- <div class="star">
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <span>(300)</span>
-                   </div>
+                   </div> -->
                 </div>
                 <div class="cost">
-                    $50.50
+                    <img src="Images/College-front.jpeg" alt="">
                 </div>
             </div>
             <div class="courses">
-                <img src="/Images/College-front.jpeg" alt="">
+                <img src="Images/archi.jpeg" alt="">
                 <div class="details">
-                    <span>Updated 22/22/2023</span>
-                    <h6>Applied Science & Humanities</h6>
-                   <div class="star">
+                    <span><h3>H.O.D - Arun Rana</h3></span>
+                    <h6>Architectural Assistantship Engineering</h6>
+                   <!-- <div class="star">
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <i class='bx bxs-star'></i>
                     <span>(300)</span>
-                   </div>
+                   </div> -->
                 </div>
                 <div class="cost">
-                    $50.50
+                    <img src="Images/College-front.jpeg" alt="">
                 </div>
             </div>
 
-               <div class="courses">
+               <!-- <div class="courses">
                 <img src="/Images/College-front.jpeg" alt="">
                 <div class="details">
                     <span>Updated 22/22/2023</span>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="cost">
                     $50.50
-                </div>
+                </div> -->
             </div>
         </div>
        
