--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Navigation -->
     <nav>
         <img src="/Images/college logo2.png" alt="">
+        <h3 class="headname" > dr. b.r ambedkar government polytechnic collage ambota,una(h.p)</h3>
         <div class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -32,7 +33,7 @@
             <source src="videos/pexels_videos_2002527 (1080p).mp4">
         </video>
         <h1>Dreams comes reality</h1>
-        <p>Lorem ipsum dolor sit  ipsa, optio ducimus corporis explicabo sint odit eveniet natus. Vel, odit!</p>
+        <p>ENGINEERING IS THE CLOSEST THING TO MAGIC EXISTS IN THE WORLD</p>
         <div class="btn">
             <a class="blue" href="#">Learn More</a>
             <a href="#" class="yellow">Our Courses</a>
@@ -44,12 +45,12 @@
     <!-- Features section -->
     <section id="features">
         <h1>Institute Features</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis aperiam repudiandae, accusantium voluptas eum officiis?</p>
+        <p></p>
         <div class="fea-base">
             <div class="fea-box">
                 <i class='bx bxs-graduation'></i>
-                <h3>Scholarship Facility</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor tenetur error sit inventore laboriosam perferendis!
+                <h3 style="color: red;">Scholarship Facility</h3>
+              <p>The Technical Education provides the various types of scholarship in order to encourage and support brilliant students belonging to the poor sections of the society
                 </p>
             </div>
         </div>
@@ -57,18 +58,21 @@
         <div class="fea-base">
             <div class="fea-box">
                 <i class='bx bx-library' ></i>
-                <h3>Library Facility</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor tenetur error sit inventore laboriosam perferendis!
-                </p>
+                <h3 style="color: red;">Library Facility</h3>
+                <p>The institution has its own central library which contain large numbers of books,pertainig to different courses,latest journals,technical and non technical magazines,news paper.</p>
+                <h4>OTHER FACILITIES</h4> 
+                <P>The internet facility has been provided in library.
+                    <br>The books reservations and the facility has been extended to students and the faculty members
+                </P>
             </div>
+
         </div>
 
         <div class="fea-base">
             <div class="fea-box">
                 <i class='bx bx-happy'></i>
-                <h3>Hostel facility </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor tenetur error sit inventore laboriosam perferendis!
-                </p>
+                <h3 style="color: red;">Hostel facility </h3>
+                <p>The institute has its own hostel facilities.There is one boys hostel and one girls hostel.</p>
             </div>
         </div>
     </section>
@@ -77,8 +81,7 @@
     <section id="course">
 
         <h1>Our Engineering Courses</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis aperiam repudiandae, accusantium voluptas eum officiis?</p>
-
+        <p style="color: red;"> "Turn a negative situation into a positive situation "</p>
         <div class="course-box">
             <div class="courses">
                 <img src="Images/applied.png" alt="">
@@ -200,7 +203,6 @@
     <!-- Registration -->
     <section id="registration">
         <div class="reminder">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, eum?</p>
             <h1>Register to Get it</h1>
             <div class="time">
                 <div class="date">
@@ -223,7 +225,7 @@
 
 
         <div class="form">
-            <h3>Create Free Account Now</h3>
+            <h3>Create Account</h3>
             <input type="text" placeholder="Name" name="" id=" " required>
             <input type="email" placeholder="Email Address" name="" id="" required>
             <input type="text" placeholder="Phone Number" name="" id="" required>
